--- a/templates/etc/init.d/lumberjack.erb
+++ b/templates/etc/init.d/lumberjack.erb
@@ -14,6 +14,7 @@ end
 
 DAEMON_PATH="/opt/lumberjack/"
 DAEMON="bin/lumberjack.sh"
+LUMBERJACK_LOG="/var/log/lumberjack.log"
 <% if json_conf %>
 DAEMONOPTS="-config /etc/lumberjack/<%= @name %>/lumberjack.conf"
 <% else %>
@@ -29,7 +30,7 @@ case "$1" in
 start)
 	printf "%-50s" "Starting $NAME..."
 	cd $DAEMON_PATH
-	PID=`$DAEMON $DAEMONOPTS > /dev/null 2>&1 & echo $!`
+	PID=`$DAEMON $DAEMONOPTS >> $LUMBERJACK_LOG 2>&1 & echo $!`
 	#echo "Saving PID" $PID " to " $PIDFILE
         if [ -z $PID ]; then
             printf "%s\n" "Fail"
@@ -76,4 +77,3 @@ restart)
         echo "Usage: $0 {status|start|stop|restart}"
         exit 1
 esac
-
